fix spacing

--- a/app/components/latest.module.css
+++ b/app/components/latest.module.css
@@ -9,4 +9,5 @@
 .mainImage2{
   width: 100%;
   height: auto;
+  margin: 1rem 0;
 }
