--- a/app/page.module.css
+++ b/app/page.module.css
@@ -36,6 +36,7 @@
 .mainImage2{
   width: 100%;
   height: auto;
+  margin: 3rem 0;
 }
 .row{
   display: grid;
